2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncDialog.cs: Fix note rename glitch, some grammar.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Bump the version to 0.7.1.3 since I used 0.7.1.2 to
	  build the demo for Hack Week.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Changed the version to 0.7.1.2.  Since we haven't
	  released 0.7.2 officially, the previous one didn't make sense.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Changed the version to 0.7.1.2.  Since we haven't
	  released 0.7.2 officially, the previous one didn't make sense.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Tomboy.cs: When importing a note XML file through `tomboy
	  --open-note`, prevent note title conflicts.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Handle NoConfiguredSyncService and
	  SyncServerCreationFailed.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Clean up the dialog so it's a little more
	  clean.  Update the text and hide progress bar properly.
	* Tomboy/SyncManager.cs: Use ActionManager to open sync.
	* Tomboy/Tomboy.cs: Moved the open sync dialog action back into
	  Tomboy.cs.
	* Tomboy/NoteWindow.cs: Use ActionManager to open the sync.
	* Tomboy/ActionManager.cs: Change text.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/PreferencesDialog.cs: Get preferences widget from newly
	  selected sync addin.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncServiceAddin.cs, Tomboy/SyncManager.cs,
	  Tomboy/Addins/FileSystemSyncService/FileSystemSyncServiceAddin.cs,
	  Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs,
	  Tomboy/Addins/SshSyncService/SshSyncServiceAddin.cs: Adding
	  SyncServiceAddin.PostSyncCleanup, which the FUSE backends use to
	  unmount the server when not in use.
	* Tomboy/Note.cs: Added TODO regarding trusting foreign note XML