@@ -1,3 +1,9 @@
+2007-06-29  Boyd Timothy <btimothy@gmail.com> 
+
+	* Tomboy/SyncManager.cs: Make sure to set SyncState.Idle before
+	  returning.  This will prevent a client from being in a broken state
+	  where they can't fix.
+
 2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
 	* Tomboy/SyncDialog.cs: Fix note rename glitch, some grammar.
